--- a/html-to-text.html
+++ b/html-to-text.html
@@ -51,34 +51,42 @@
     "name": "HTML to Text Converter Strip HTML Tags Online (Free, Private)",
     "url": "https://www.alltoolai.com/html-to-text",
     "description": "Free HTML to Text converter by All Tool AI. Instantly strip all tags from HTML to get clean, readable text. 100% private, runs locally in your browser.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/html-to-text"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/text-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "HTML to Text Converter",
     "operatingSystem": "Any",
     "applicationCategory": "WebApplication",
     "url": "https://www.alltoolai.com/html-to-text",
     "description": "Free online HTML to Text converter by All Tool AI. Strip HTML tags, remove CSS/JS, and extract clean, readable text instantly. 100% private and runs locally in your browser.",
     "softwareVersion": "1.0",
-    "author": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
-    },
     "offers": {
       "@type": "Offer",
       "price": "0.00",
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/html-to-text"
     }
   }
   </script>
