--- a/text-analyzer.html
+++ b/text-analyzer.html
@@ -52,18 +52,22 @@
     "name": "Free Text Analyzer: Word Count, Readability, Keyword Density",
     "description": "Analyze, optimize, and perfect your text with AllToolAI’s free text analyzer for word counts, readability, and keyword density — fast, private, and unlimited.",
     "url": "https://www.alltoolai.com/text-analyzer",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-analyzer"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/",
-      "name": "AllToolAI"
+      "url": "https://www.alltoolai.com/text-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "AllToolAI Text Analyzer",
     "operatingSystem": "Any",
     "applicationCategory": "WebApplication",
@@ -75,10 +79,14 @@
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-analyzer"
     }
   }
   </script>
