--- a/text-formatter.html
+++ b/text-formatter.html
@@ -52,31 +52,40 @@
     "name": "Text Formatter | All Tool AI",
     "url": "https://www.alltoolai.com/text-formatter",
     "description": "Free online text formatter that converts case, removes spaces and line breaks, trims, deduplicates, and sorts lines. Fast, private, and unlimited — processed locally in your browser.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-formatter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/text-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Text Formatter",
     "operatingSystem": "Any",
     "applicationCategory": "WebApplication",
     "description": "An online text formatting tool that converts case, removes extra spaces, line breaks, duplicates, and sorts lines. Fast, private, and free.",
     "url": "https://www.alltoolai.com/text-formatter",
-    "creator": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
-    },
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-formatter"
     }
   }
   </script>
