--- a/text-to-code.html
+++ b/text-to-code.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://www.alltoolai.com/text-to-code" />
 
   <!-- Title + description -->
-  <title>Text to Binary, Hex, Decimal & Octal Converter | Free Code Translator — 100% Private</title>
+  <title>Text to Binary, Hex, Decimal & Octal Converter | 100% Private & Free</title>
   <meta name="description" content="Convert text ↔ binary, hex, decimal, and octal instantly. Fast, best and lifetime free unlimited, 100% private (processed locally in your browser). Copy, download, delimiter options, no signup." />
   <meta name="keywords" content="text to binary converter, binary to text, text to hex converter, hex to text, ascii to hex, unicode converter, octal converter, decimal converter, code translator, number system converter, free online converter" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
@@ -51,17 +51,22 @@
     "url": "https://www.alltoolai.com/text-to-code",
     "name": "Text to Binary, Hex, Decimal & Octal Converter | Free Code Translator — 100% Private",
     "description": "Convert text to binary, hexadecimal, decimal, and octal — or decode them back to text. 100% free, private, and secure. All processing happens locally in your browser.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-to-code"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/text-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Text to Code Converter",
     "operatingSystem": "Any",
     "applicationCategory": "UtilityApplication",
@@ -81,8 +86,12 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-to-code"
     }
   }
   </script>
