--- a/text-tools.html
+++ b/text-tools.html
@@ -53,12 +53,19 @@
     "name": "Text Tools: Text to PDF/HTML/Code + Analyzer & Formatter",
     "url": "https://www.alltoolai.com/text-tools",
     "description": "Free online text tools to convert, analyze, and format text: Text to PDF/HTML/Code, Analyzer, and Formatter. Fast, free, unlimited, and privacy first.",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/",
-      "name": "All Tool AI"
+      "url": "https://www.alltoolai.com/"
     }
+
   }
   </script>
   <script type="application/ld+json">
@@ -137,11 +144,46 @@
     "itemListOrder": "Ascending",
     "numberOfItems": 5,
     "itemListElement": [
-      { "@type": "ListItem", "position": 1, "name": "Text to PDF", "url": "https://www.alltoolai.com/text-to-pdf" },
-      { "@type": "ListItem", "position": 2, "name": "Html to Text", "url": "https://www.alltoolai.com/html-to-text" },
-      { "@type": "ListItem", "position": 3, "name": "Text to Code", "url": "https://www.alltoolai.com/text-to-code" },
-      { "@type": "ListItem", "position": 4, "name": "Text Analyzer", "url": "https://www.alltoolai.com/text-analyzer" },
-      { "@type": "ListItem", "position": 5, "name": "Text Formatter", "url": "https://www.alltoolai.com/text-formatter" }
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Text to PDF",
+        "url": "https://www.alltoolai.com/text-to-pdf",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Html to Text",
+        "url": "https://www.alltoolai.com/html-to-text",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to Code",
+        "url": "https://www.alltoolai.com/text-to-code",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Text Analyzer",
+        "url": "https://www.alltoolai.com/text-analyzer",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Text Formatter",
+        "url": "https://www.alltoolai.com/text-formatter",
+        "applicationCategory": "WebApplication",
+        "operatingSystem": "Web"
+      }
     ]
   }
   </script>
