--- a/angle-unit-converter.html
+++ b/angle-unit-converter.html
@@ -51,17 +51,22 @@
     "name": "Angle Unit Converter | Free Radians ↔ Degrees Calculator",
     "url": "https://www.alltoolai.com/angle-unit-converter",
     "description": "Convert between radians, degrees, gradians, arcminutes, arcseconds, milliradians, and turns instantly. 100% offline, private, and free angle unit converter.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/angle-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Angle Unit Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilitiesApplication",
@@ -80,8 +85,12 @@
     ],
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/angle-unit-converter"
     }
   }
   </script>
