--- a/area-unit-converter.html
+++ b/area-unit-converter.html
@@ -50,17 +50,22 @@
     "name": "Area Unit Converter",
     "url": "https://www.alltoolai.com/area-unit-converter",
     "description": "Free, fast, private area unit converter for m², ft², acres, hectares, and more. Works offline and securely in your browser with no data collection.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/area-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Area Unit Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -76,7 +81,16 @@
       "Unlimited and free",
       "Accurate conversions",
       "Works on all devices"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/area-unit-converter"
+    }
   }
   </script>
   <script type="application/ld+json">
