--- a/data-transfer-rate-unit-converter.html
+++ b/data-transfer-rate-unit-converter.html
@@ -51,18 +51,22 @@
     "name": "Data Transfer Rate Unit Converter",
     "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter",
     "description": "Effortlessly convert between data transfer rate units including bit/s, kbit/s, Mbps, MB/s, Gbps, and more with this free, fast, and offline converter.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/data-transfer-rate-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Data Transfer Rate Unit Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -78,7 +82,16 @@
       "Supports multiple units including Mbps, MB/s, Gbps",
       "Free and unlimited usage",
       "Fast and accurate results"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/data-transfer-rate-unit-converter"
+    }
   }
   </script>
   <script type="application/ld+json">
