--- a/digital-storage-unit-converter.html
+++ b/digital-storage-unit-converter.html
@@ -6,7 +6,7 @@
   <meta name="author" content="All Tool AI" />
   <link rel="canonical" href="https://www.alltoolai.com/digital-storage-unit-converter" />
 
-  <title>Digital Storage Unit Converter | Convert Bits, Bytes, KB, MB, GB, TB Instantly</title>
+  <title>Digital Storage Unit Converter | Convert Bits, Bytes, KB, MB, GB, TB</title>
   <meta name="description" content="Convert bits, bytes, KB, KiB, MB, MiB, GB, GiB, TB, TiB, PB, PiB instantly. 100% free, offline, private digital storage unit converter. No sign-ups, unlimited use." />
   <meta name="keywords" content="digital storage converter, data size converter, file size converter, bytes to kilobytes, KB to MB, MB to GB, GB to TB, bits to bytes, KiB to KB, MiB to MB, GiB to GB, TB to TiB, PB to PiB" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview">
@@ -49,17 +49,22 @@
     "name": "Digital Storage Unit Converter",
     "url": "https://www.alltoolai.com/digital-storage-unit-converter",
     "description": "Effortlessly convert digital storage units including bits, bytes, KB, MB, GB, TB, PB, and binary units KiB, MiB, GiB, TiB, PiB. Instant, accurate, and private—works offline.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/digital-storage-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Digital Storage Unit Converter",
     "operatingSystem": "Web Browser",
     "applicationCategory": "UtilityApplication",
@@ -80,6 +85,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/digital-storage-unit-converter"
     }
   }
   </script>
