--- a/energy-unit-converter.html
+++ b/energy-unit-converter.html
@@ -53,17 +53,22 @@
     "name": "Energy Unit Converter",
     "url": "https://www.alltoolai.com/energy-unit-converter",
     "description": "Free, instant, and private energy unit converter for Joule, kWh, cal, BTU, eV, therm, and more. Works offline, 100% client-side, accurate, and unlimited.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/energy-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Energy Unit Converter",
     "operatingSystem": "All modern browsers",
     "applicationCategory": "UtilityApplication",
@@ -77,6 +82,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/energy-unit-converter"
     }
   }
   </script>
