--- a/frequency-unit-converter.html
+++ b/frequency-unit-converter.html
@@ -49,17 +49,22 @@
     "url": "https://www.alltoolai.com/frequency-unit-converter",
     "name": "Frequency Unit Converter (Hz ⇄ kHz ⇄ MHz ⇄ GHz)",
     "description": "Convert frequency units instantly between Hertz (Hz), Kilohertz (kHz), Megahertz (MHz), and Gigahertz (GHz). Fast, free, private, and offline frequency conversion tool.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/frequency-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Frequency Unit Converter",
     "applicationCategory": "UtilitiesApplication",
     "operatingSystem": "Any",
@@ -76,10 +81,14 @@
       "price": "0",
       "priceCurrency": "USD"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/frequency-unit-converter"
     }
   }
   </script>
