--- a/fuel-economy-unit-converter.html
+++ b/fuel-economy-unit-converter.html
@@ -54,17 +54,22 @@
     "url": "https://www.alltoolai.com/fuel-economy-unit-converter",
     "name": "Fuel Economy Unit Converter",
     "description": "Instantly convert between MPG (US/UK), km/L, and L/100 km. 100% client-side, private, free, and accurate fuel economy conversions.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/fuel-economy-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Fuel Economy Unit Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -85,6 +90,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/fuel-economy-unit-converter"
     }
   }
   </script>
