--- a/length-unit-converter.html
+++ b/length-unit-converter.html
@@ -52,17 +52,22 @@
     "name": "Length Unit Converter",
     "url": "https://www.alltoolai.com/length-unit-converter",
     "description": "Free, fast, and private length unit converter for m, cm, mm, km, in, ft, yd, mi, µm, nm, and nmi. 100% client-side and secure.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/length-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Length Unit Converter",
     "operatingSystem": "Any",
     "applicationCategory": "UtilitiesApplication",
@@ -77,6 +82,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/length-unit-converter"
     }
   }
   </script>
