--- a/mass-unit-converter.html
+++ b/mass-unit-converter.html
@@ -51,17 +51,22 @@
     "name": "Mass Unit Converter",
     "url": "https://www.alltoolai.com/mass-unit-converter",
     "description": "Convert between kilograms, pounds, grams, ounces, tonnes, stones, and more with the free, private, and offline Mass Unit Converter from AllToolAI.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/mass-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Mass Unit Converter",
     "operatingSystem": "Any",
     "applicationCategory": "UtilitiesApplication",
@@ -79,10 +84,14 @@
       "Supports metric and imperial units",
       "Works across all devices"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/mass-unit-converter"
     }
   }
   </script>
