--- a/pressure-unit-converter.html
+++ b/pressure-unit-converter.html
@@ -48,18 +48,22 @@
     "name": "Pressure Unit Converter",
     "url": "https://www.alltoolai.com/pressure-unit-converter",
     "description": "Instantly convert between pressure units like psi, bar, Pa, kPa, atm, and Torr. 100% free, offline, and private pressure conversion tool.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pressure-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Pressure Unit Converter",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "Web",
@@ -75,6 +79,15 @@
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pressure-unit-converter"
     }
   }
   </script>
