--- a/speed-unit-converter.html
+++ b/speed-unit-converter.html
@@ -51,17 +51,22 @@
     "name": "Speed Unit Converter",
     "url": "https://www.alltoolai.com/speed-unit-converter",
     "description": "Convert between mph, km/h, m/s, ft/s, and knots instantly. 100% free, offline, private, and accurate speed converter.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/speed-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Speed Unit Converter",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "Web",
@@ -80,8 +85,12 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
+      "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/speed-unit-converter"
     }
   }
   </script>
