--- a/temperature-unit-converter.html
+++ b/temperature-unit-converter.html
@@ -50,17 +50,22 @@
     "name": "Temperature Unit Converter (°C ⇄ °F ⇄ K)",
     "url": "https://www.alltoolai.com/temperature-unit-converter",
     "description": "Convert Celsius, Fahrenheit, and Kelvin instantly. 100% free, offline, and private temperature converter tool.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/temperature-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Temperature Unit Converter",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "Web",
@@ -78,10 +83,14 @@
       "price": "0",
       "priceCurrency": "USD"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/temperature-unit-converter"
     }
   }
   </script>
