--- a/time-unit-converter.html
+++ b/time-unit-converter.html
@@ -49,16 +49,22 @@
     "name": "Time Unit Converter",  
     "url": "https://www.alltoolai.com/time-unit-converter",  
     "description": "Free, fast, and private time unit converter for nanoseconds, seconds, minutes, hours, days, weeks, months, and years. 100% client-side and offline capable.",  
-    "isPartOf": {  
-      "@type": "WebSite",  
-      "url": "https://www.alltoolai.com/"  
-    }  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/time-unit-converter"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/unit-converter-tools"
+    }
   }  
   </script>
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "Time Unit Converter",  
     "operatingSystem": "Any",  
     "applicationCategory": "UtilitiesApplication",  
@@ -75,7 +81,16 @@
       "Free and unlimited use",  
       "Accurate results",  
       "Works on desktop and mobile browsers"  
-    ]  
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/time-unit-converter"
+    }
   }  
   </script>
   <script type="application/ld+json">  
