--- a/volume-unit-converter.html
+++ b/volume-unit-converter.html
@@ -51,17 +51,22 @@
     "name": "Volume Unit Converter",
     "url": "https://www.alltoolai.com/volume-unit-converter",
     "description": "Free online volume converter for liters, milliliters, gallons, quarts, pints, cups, and cubic units. Fast, accurate, private, and works offline.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/volume-unit-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/unit-converter-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Volume Unit Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -77,10 +82,14 @@
       "Fast and accurate conversions",
       "Supports metric, US, and Imperial systems"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/volume-unit-converter"
     }
   }
   </script>
