--- a/unit-converter-tools.html
+++ b/unit-converter-tools.html
@@ -52,7 +52,14 @@
     "name": "Free Unit Converter Tools",
     "url": "https://www.alltoolai.com/unit-converter-tools",
     "description": "Convert between metric and imperial units instantly with All Tool AI’s free online unit converter tools. Fast, accurate, and privacy-first conversions for length, mass, temperature, speed, and more.",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/unit-converter-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/"
@@ -133,20 +140,118 @@
     "itemListOrder": "Ascending",
     "numberOfItems": 14,
     "itemListElement": [
-      { "@type": "ListItem", "position": 1,  "name": "Length Unit Converter",          "url": "https://www.alltoolai.com/length-unit-converter" },
-      { "@type": "ListItem", "position": 2,  "name": "Area Unit Converter",            "url": "https://www.alltoolai.com/area-unit-converter" },
-      { "@type": "ListItem", "position": 3,  "name": "Data Transfer Rate Converter",   "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter" },
-      { "@type": "ListItem", "position": 4,  "name": "Digital Storage Unit Converter", "url": "https://www.alltoolai.com/digital-storage-unit-converter" },
-      { "@type": "ListItem", "position": 5,  "name": "Energy Unit Converter",          "url": "https://www.alltoolai.com/energy-unit-converter" },
-      { "@type": "ListItem", "position": 6,  "name": "Frequency Unit Converter",       "url": "https://www.alltoolai.com/frequency-unit-converter" },
-      { "@type": "ListItem", "position": 7,  "name": "Fuel Economy Unit Converter",    "url": "https://www.alltoolai.com/fuel-economy-unit-converter" },
-      { "@type": "ListItem", "position": 8,  "name": "Mass Unit Converter",            "url": "https://www.alltoolai.com/mass-unit-converter" },
-      { "@type": "ListItem", "position": 9,  "name": "Plane Angle Unit Converter",     "url": "https://www.alltoolai.com/angle-unit-converter" },
-      { "@type": "ListItem", "position": 10, "name": "Pressure Unit Converter",        "url": "https://www.alltoolai.com/pressure-unit-converter" },
-      { "@type": "ListItem", "position": 11, "name": "Temperature Unit Converter",     "url": "https://www.alltoolai.com/temperature-unit-converter" },
-      { "@type": "ListItem", "position": 12, "name": "Speed Unit Converter",           "url": "https://www.alltoolai.com/speed-unit-converter" },
-      { "@type": "ListItem", "position": 13, "name": "Time Unit Converter",            "url": "https://www.alltoolai.com/time-unit-converter" },
-      { "@type": "ListItem", "position": 14, "name": "Volume Unit Converter",          "url": "https://www.alltoolai.com/volume-unit-converter" }     
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Length Unit Converter",
+        "url": "https://www.alltoolai.com/length-unit-converter",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Area Unit Converter",
+        "url": "https://www.alltoolai.com/area-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Data Transfer Rate Converter",
+        "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Digital Storage Unit Converter",
+        "url": "https://www.alltoolai.com/digital-storage-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Energy Unit Converter",
+        "url": "https://www.alltoolai.com/energy-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Frequency Unit Converter",
+        "url": "https://www.alltoolai.com/frequency-unit-converter",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "name": "Fuel Economy Unit Converter",
+        "url": "https://www.alltoolai.com/fuel-economy-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 8,
+        "name": "Mass Unit Converter",
+        "url": "https://www.alltoolai.com/mass-unit-converter",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 9,
+        "name": "Plane Angle Unit Converter",
+        "url": "https://www.alltoolai.com/angle-unit-converter",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 10,
+        "name": "Pressure Unit Converter",
+        "url": "https://www.alltoolai.com/pressure-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 11,
+        "name": "Temperature Unit Converter",
+        "url": "https://www.alltoolai.com/temperature-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 12,
+        "name": "Speed Unit Converter",
+        "url": "https://www.alltoolai.com/speed-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 13,
+        "name": "Time Unit Converter",
+        "url": "https://www.alltoolai.com/time-unit-converter",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 14,
+        "name": "Volume Unit Converter",
+        "url": "https://www.alltoolai.com/volume-unit-converter",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      }    
     ]
   }
   </script>
